# optprov/src/api/models/AddProvider.ts
@@ -1,0 +1,104 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * OptProv API
+ * This is the REST API to interact and control with libp2p hosts. All responses not in the HTTP status code range [200,300) return the error object below. 
+ *
+ * The version of the OpenAPI document: 1.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { exists, mapValues } from '../runtime';
+/**
+ * 
+ * @export
+ * @interface AddProvider
+ */
+export interface AddProvider {
+    /**
+     * 
+     * @type {number}
+     * @memberof AddProvider
+     */
+    id: number;
+    /**
+     * 
+     * @type {string}
+     * @memberof AddProvider
+     */
+    remoteId: string;
+    /**
+     * 
+     * @type {string}
+     * @memberof AddProvider
+     */
+    startedAt: string;
+    /**
+     * 
+     * @type {string}
+     * @memberof AddProvider
+     */
+    endedAt: string;
+    /**
+     * 
+     * @type {number}
+     * @memberof AddProvider
+     */
+    durationInS: number;
+    /**
+     * 
+     * @type {string}
+     * @memberof AddProvider
+     */
+    distance: string;
+    /**
+     * 
+     * @type {string}
+     * @memberof AddProvider
+     */
+    error: string | null;
+}
+
+export function AddProviderFromJSON(json: any): AddProvider {
+    return AddProviderFromJSONTyped(json, false);
+}
+
+export function AddProviderFromJSONTyped(json: any, ignoreDiscriminator: boolean): AddProvider {
+    if ((json === undefined) || (json === null)) {
+        return json;
+    }
+    return {
+        
+        'id': json['id'],
+        'remoteId': json['remoteId'],
+        'startedAt': json['startedAt'],
+        'endedAt': json['endedAt'],
+        'durationInS': json['durationInS'],
+        'distance': json['distance'],
+        'error': json['error'],
+    };
+}
+
+export function AddProviderToJSON(value?: AddProvider | null): any {
+    if (value === undefined) {
+        return undefined;
+    }
+    if (value === null) {
+        return null;
+    }
+    return {
+        
+        'id': value.id,
+        'remoteId': value.remoteId,
+        'startedAt': value.startedAt,
+        'endedAt': value.endedAt,
+        'durationInS': value.durationInS,
+        'distance': value.distance,
+        'error': value.error,
+    };
+}
+
