# optprov/src/api/models/index.ts
@@ -1,11 +1,17 @@
 /* tslint:disable */
 /* eslint-disable */
+export * from './AddProvider';
+export * from './Connection';
 export * from './CreateHostRequest';
+export * from './Dial';
 export * from './ErrorCode';
 export * from './ErrorResponse';
+export * from './FindNode';
 export * from './Host';
 export * from './Peer';
 export * from './Provide';
+export * from './ProvideDetails';
+export * from './ProvideDetailsAllOf';
 export * from './RoutingTable';
 export * from './RoutingTableDetails';
 export * from './RoutingTableDetailsAllOf';
